# HydrusCXXPatch

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
hydrusCXXPatch/: PatchedClient.py
hydrusCXXPatch/src/: getMime.cpp
